@@ -1,6 +1,5 @@
-
+* add more unit tests
 * Should check for up2date errors (return code?)
-
 * Check for updates on Mac OS X / macports systems
 
 # $Id$
