@@ -4,6 +4,7 @@
 	* check_updates: fixed the detection of RH 6 and Scientific Linux Systems
 	                 (thanks to J. Oliveira)
 	* check_updates: several style fixes (cleaned with Perl::Critic)
+        * t:             some unit tests (to be extended)
 
 2010-11-18  Matteo Corti  <matteo.corti@id.ethz.ch>
 
